k8s/manifests/ddns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ddns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ddns
    spec:
      containers:
      - name: ddns
        image: timothyjmiller/cloudflare-ddns:latest
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 32Mi
        volumeMounts:
        - name: config
          mountPath: /config.json
          subPath: config.json
      volumes:
      - name: config
        secret:
          secretName: config
          defaultMode: 420
          items:
          - key: config.json
            path: config.json
